--- a/css/index.css
+++ b/css/index.css
@@ -44,37 +44,49 @@ h1 , h2 , h3 , h4 , h5 , h6{
     font-size: inherit;
     font-weight: inherit;
 }
-.Header{
+.Header {
     width: 100%;
     background-color: var(--principal);
     padding: 10px 20px;
+
 }
-.Header-wrap{
+
+.Header-wrap {
     width: 100%;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 }
-.Header-nav{
+
+.Header-nav {
     width: 50%;
 }
-.Header-ul{
+
+.Header-ul {
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-around;
     align-items: center;
 }
-.Header-a{
+
+.Header-a {
     padding: 10px;
     color: var(--negro);
     font-size: 1.2rem;
     transition: background-color .3s ease;
 }
-.Header-a:hover{
+
+.Header-a:hover {
     background-color: var(--plateado);
 }
-.Header-boton{
+
+.Header-boton {
+    display: none;
+}
+
+.Header-ul--boton{
     display: none;
 }
 .Main{
@@ -263,4 +275,79 @@ h1 , h2 , h3 , h4 , h5 , h6{
     justify-content: space-between;
     align-items: center;
     color: var(--plateado);
+}
+@media (max-width:480px){
+
+    .Header{
+        min-height: 50px;
+    }
+    .Header-wrap{
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .Header-boton{
+        display: block;
+        width: 50px;
+        height: 50px;
+    }
+    .Header-h1{
+        width: 150px;
+    }
+    .Header-a{
+        width: 100%;
+    }
+    .Boton-ul{
+        background-color: var(--principal);
+        color: var(--negro);
+        width: 90px;
+        height: 0px;
+        position: absolute;
+        top: 50px;
+        right: -20px;
+        z-index: 2;
+        overflow: hidden;
+
+
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: space-evenly;
+        align-items: center;
+
+        transition: all .5s ease;
+
+    }
+    .Boton-ul.Activo{
+        height: 200px;
+    }
+    .Boton-li{
+        width: 100%;
+        height: calc(210px / 4);
+        text-align: center;
+
+    }
+    .Boton-a{
+        width: 100%;
+        height: 100%;
+        padding: 5px;
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: center;
+        align-items: center;
+        transition: background-color .5s ease;
+    }
+    .Boton-a:hover{
+        background-color: var(--plateado);
+        color: var(--negro);
+    }
+    .Header-nav{
+        display: none;
+    }
+    .Next{ 
+        right: 0px; 
+    }
+    .Prev{ 
+        left: 0px; 
+    }
 }
