--- a/css/tienda.css
+++ b/css/tienda.css
@@ -74,7 +74,7 @@ button {
 .Header {
     width: 100%;
     background-color: var(--principal);
-    padding: 10px 20px;
+    padding: 0px 20px;
     position: relative;
 }
 
@@ -87,7 +87,8 @@ button {
 }
 
 .Header-nav {
-    width: 50%;
+    width: 80%;
+    max-width: 500px;
 }
 
 .Header-ul {
@@ -115,9 +116,7 @@ button {
 .Header-ul--boton{
     display: none;
 }
-.Main {
-    width: 100%;
-}
+
 
 .Cesta {
     width: 50%;
@@ -294,9 +293,32 @@ button {
 .Main {
     width: 100%;
     min-height: 1000px;
-    background-color: var(--fondo);
     color: var(--blanco);
     position: relative;
+}
+
+.Fondo{
+    width: 100%;
+    height: 100%;
+    background-color: var(--fondo);
+
+    position: absolute;
+    pointer-events: none;
+
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    z-index: -1;
+
+}
+.Fondo-svg{
+    width: 100%;
+    max-width: 700px;
+    
+    color: var(--claro);
+    opacity: 0.3;
+    filter: blur(1px);
 }
 
 .Mapas {
@@ -312,8 +334,8 @@ button {
 .Main-h2 {
     width: 60%;
     padding: 0px 25px;
-    font-size: 2.4rem;
     font-weight: 600;
+    font-size: 3rem;
 }
 .Main-p {
     padding: 0px 25px;
@@ -336,7 +358,7 @@ button {
 }
 
 .Filtro-legend {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     
 }
 
@@ -357,7 +379,7 @@ button {
 }
 
 .Articulo-wrap {
-    padding: 15px;
+    padding: 10px;
     background-color: var(--claro);
     border: 3px solid var(--principal);
     border-radius: 15px;
@@ -374,12 +396,12 @@ button {
 }
 
 .Articulo-h3 {
-    font-size: 1.8rem;
-    font-weight: 500;
+    font-size: 1.6rem;
+
 }
 
 .Articulo-span {
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     font-weight: 700;
 }
 
@@ -422,7 +444,6 @@ button {
 }
 .Lightbox-wrap{
     border: 5px solid var(--principal);
-    background-color: blue;
     border-radius: 25px;
     overflow: hidden;
 }
@@ -440,7 +461,29 @@ button {
     align-items: center;
     color: var(--plateado);
 }
-@media (max-width:480px){
+@media(max-width:1024px){
+    .Articulo {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .Main-h2{
+        font-weight: 600;
+        font-size: 2.2rem;
+    }
+}
+@media(max-width:768px){
+    .Articulo {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .Articulo-h3 {
+        font-size: 1.5rem;
+        font-weight: 500;
+    }
+    .Main-h2{
+        font-weight: 600;
+        font-size: 2.2rem;
+    }
+}
+@media (max-width:600px){
 
     .Header{
         min-height: 50px;
@@ -467,7 +510,7 @@ button {
         width: 90px;
         height: 0px;
         position: absolute;
-        top: 76px;
+        top: 60px;
         right:  0px;
         z-index: 2;
         overflow: hidden;
