--- a/css/index.css
+++ b/css/index.css
@@ -62,8 +62,9 @@ h6 {
 .Header {
     width: 100%;
     background-color: var(--principal);
-    padding: 0px 20px;
-
+    background-image: url('/TIENDA/assets/texturamadera.png');
+    background-blend-mode: soft-light;
+    padding: 0rem 1.25rem;
 }
 
 .Header-wrap {
