--- a/css/tienda.css
+++ b/css/tienda.css
@@ -77,6 +77,7 @@ button {
     background-image: url('/TIENDA/assets/texturamadera.png');
     background-blend-mode: soft-light;
     padding: 0rem 1.25rem;
+    position: relative;
 }
 
 .Header-wrap {
@@ -133,6 +134,8 @@ button {
     justify-content: space-evenly;
     align-items: center;
     z-index: 1;
+    border:3px solid var(--principal);
+    border-radius: 0px 0px 0px 15px ;
 }
 
 .Cesta-button {
@@ -162,9 +165,11 @@ button {
 
 .Cesta-wrap {
     width: 80%;
-
     min-height: 500px;
+
     background-color: var(--plateado);
+    border: 3px solid var(--principal);
+    border-radius: 15px;
     padding: 15px;
     position: fixed;
     top: calc(50% - (500px / 2));
@@ -194,6 +199,15 @@ button {
     justify-content: center;
     align-items: center;
 }
+.Cesta-svg--cerrar{
+    height: 40px;
+
+}
+.Cesta-svg--cerrar:hover {
+    height: 50px;
+
+}
+
 
 .Cesta-ul {
     width: 100%;
@@ -256,6 +270,7 @@ button {
     min-height: 60px;
     background-color: var(--principal);
     border: 3px solid var(--claro);
+    border-radius: 15px;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
@@ -287,9 +302,6 @@ button {
     color: var(--negro);
 }
 
-.Cesta-svg--cerrar {
-    width: 40px;
-}
 
 .Main {
     width: 100%;
