--- a/css/index.css
+++ b/css/index.css
@@ -33,11 +33,18 @@ svg {
 :root {
     font-size: 100%;
     scroll-behavior: smooth;
+    /* Los colores principales son los siguientes */
+    /* Para el fondo */
     --fondo: rgb(48, 44, 32);
+    /* Color del header y de los detalles */
     --principal: rgb(233, 177, 9);
+    /* Color de fondo de las tarjetas*/
     --claro: rgb(122, 109, 69);
+    /* Color de los textos */
     --blanco: rgb(255, 255, 255);
+    /* Color de algunos textos del header */
     --negro: rgb(22, 22, 22);
+    /* Color de fondo de la cesta, de los enlaces al hacer hover y algunos textos */
     --plateado: rgb(223, 223, 223);
     font-family: "Grenze", serif;
 
@@ -76,11 +83,11 @@ h6 {
     position: relative;
 }
 .Header-h1{
-    max-width: 120px;
+    max-width: 7.5rem;
 }
 .Header-nav {
     width: 80%;
-    max-width: 500px;
+    max-width: 31.25rem;
 }
 
 .Header-ul {
@@ -91,7 +98,7 @@ h6 {
 }
 
 .Header-a {
-    padding: 15px;
+    padding: .9375rem;
     color: var(--negro);
     font-size: 1.2rem;
     transition: background-color .3s ease;
@@ -110,12 +117,13 @@ h6 {
 }
 
 .Main {
+    min-height: 100vh;
     width: 100%;
 }
 
 .Hero {
     width: 100%;
-    min-height: 500px;
+    min-height: 50vh;
     position: relative;
 
     display: flex;
@@ -140,14 +148,14 @@ h6 {
 
 .Hero-info {
     width: 90%;
-    max-width: 700px;
-    padding: 20px;
+    max-width: 43.75rem;
+    padding: 1.25rem;
 
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-between;
     align-items: center;
-    gap: 20px;
+    gap: 1.25rem;
 }
 
 .Hero-h2 {
@@ -158,15 +166,15 @@ h6 {
 
 .Hero-svg {
     color: var(--negro);
-    max-width: 400px;
+    max-width: 25rem;
 }
 
 .Hero-a {
     background-color: var(--negro);
     color: var(--principal);
     font-size: 1.2rem;
-    padding: 15px;
-    border: 2px solid var(--principal);
+    padding: .9375rem;
+    border: .125rem solid var(--principal);
     transition: background-color .3s ease, color .3s ease;
 }
 
@@ -179,8 +187,9 @@ h6 {
     width: 100%;
     background-color: var(--fondo);
     color: var(--blanco);
+    min-height: 50vh;
 
-    padding: 20px;
+    padding: 1.25rem;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
@@ -195,16 +204,16 @@ h6 {
 
 .Carrousel {
     width: 90%;
-    max-width: 800px;
-    min-height: 520px;
-    margin: 20px auto;
+    max-width: 50rem;
+    min-height: 32.5rem;
+    margin: 1.25rem auto;
     position: relative;
     overflow-x: hidden;
 }
 
 .Carrousel-slide {
     width: calc(100% * 3);
-    min-height: 500px;
+    min-height: 31.25rem;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     transition: all .5s ease;
@@ -213,11 +222,11 @@ h6 {
 .Carrousel-articulo {
 
     height: 100%;
-    border-radius: 25px;
+    border-radius: 1.5625rem;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
-    padding: 20px;
+    gap: .625rem;
+    padding: 1.25rem;
     background-color: var(--claro);
     border: .1875rem solid var(--principal);
 }
@@ -230,12 +239,12 @@ h6 {
 }
 
 .Articulo-wrap {
-    padding: 10px;
+    padding: .625rem;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
     align-items: start;
-    gap: 40px;
+    gap: 2.5rem;
     grid-row: 1 / 3;
     
 }
@@ -266,24 +275,24 @@ h6 {
 }
 
 .Flecha-arrow {
-    border-radius: 10px;
+    border-radius: .625rem;
     background-color: transparent;
     color: var(--plateado);
-    width: 48px;
-    height: 48px;
+    width: 3rem;
+    height: 3rem;
     transition: all .5s ease;
     opacity: 1;
 
     position: absolute;
-    bottom: 50px;
+    bottom: 3.125rem;
 }
 
 .Next {
-    right: 10px;
+    right: .625rem;
 }
 
 .Prev {
-    left: 10px;
+    left: .625rem;
 }
 
 .Carrousel-ul {
@@ -293,13 +302,13 @@ h6 {
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    padding: 10px 0px;
+    padding: .625rem 0rem;
 
 }
 
 .Carrousel-point {
-    width: 10px;
-    height: 10px;
+    width: .625rem;
+    height: .625rem;
     background-color: var(--claro);
     border-radius: 25%;
 }
@@ -322,7 +331,7 @@ h6 {
 @media (max-width: 600px){
 
     .Header {
-        min-height: 50px;
+        min-height: 3.125rem;
     }
 
     .Header-wrap {
@@ -334,12 +343,12 @@ h6 {
 
     .Header-boton {
         display: block;
-        width: 50px;
-        height: 50px;
+        width: 3.125rem;
+        height: 3.125rem;
     }
 
     .Header-h1 {
-        width: 150px;
+        width: 9.375rem;
     }
 
     .Header-a {
@@ -349,11 +358,11 @@ h6 {
     .Boton-ul {
         background-color: var(--principal);
         color: var(--negro);
-        width: 90px;
-        height: 0px;
+        width: 5.625rem;
+        height: 0rem;
         position: absolute;
-        top: 50px;
-        right: -20px;
+        top: 3.125rem;
+        right: -1.25rem;
         z-index: 2;
         overflow: hidden;
 
@@ -368,12 +377,12 @@ h6 {
     }
 
     .Boton-ul.Activo {
-        height: 200px;
+        height: 12.5rem;
     }
 
     .Boton-li {
         width: 100%;
-        height: calc(210px / 4);
+        height: calc(13.125rem / 4);
         text-align: center;
 
     }
@@ -381,7 +390,7 @@ h6 {
     .Boton-a {
         width: 100%;
         height: 100%;
-        padding: 5px;
+        padding: .3125rem;
         display: flex;
         flex-flow: column nowrap;
         justify-content: center;
@@ -398,7 +407,7 @@ h6 {
         display: none;
     }
     .Main-h2{
-        font-size: 35.2px;
+        font-size: 2.2rem;
     }
     .Carrousel-articulo {
         width: 100%;
@@ -406,13 +415,13 @@ h6 {
 
     .Carrousel-articulo {
         height: 100%;
-        border-radius: 25px;
+        border-radius: 1.5625rem;
         display: flex;
         flex-flow: column nowrap;
         justify-content: space-between;
         align-items: center;
-        gap: 10px;
-        padding: 20px;
+        gap: .625rem;
+        padding: 1.25rem;
     }
 
     .Articulo-img {
@@ -421,12 +430,12 @@ h6 {
     }
 
     .Articulo-wrap {
-        padding: 10px;
+        padding: .625rem;
         display: flex;
         flex-flow: column nowrap;
         justify-content: center;
         align-items: start;
-        gap: 40px;
+        gap: 2.5rem;
 
     }
 
