--- a/css/tienda.css
+++ b/css/tienda.css
@@ -88,11 +88,11 @@ button {
     align-items: center;
 }
 .Header-h1{
-    max-width: 120px;
+    max-width: 7.5rem;
 }
 .Header-nav {
     width: 80%;
-    max-width: 500px;
+    max-width: 31.25rem;
 }
 
 .Header-ul {
@@ -103,7 +103,7 @@ button {
 }
 
 .Header-a {
-    padding: 15px;
+    padding: .9375rem;
     color: var(--negro);
     font-size: 1.2rem;
     transition: background-color .3s ease;
@@ -124,20 +124,20 @@ button {
 
 .Cesta {
     width: 50%;
-    max-width: 200px;
-    height: 60px;
+    max-width: 12.5rem;
+    height: 3.75rem;
     background-color: var(--plateado);
-    padding: 10px;
+    padding: .625rem;
     position: absolute;
     right: 0;
-    bottom: -60px;
+    bottom: -3.75rem;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-evenly;
     align-items: center;
     z-index: 1;
-    border:3px solid var(--principal);
-    border-radius: 0px 0px 0px 15px ;
+    border:.1875rem solid var(--principal);
+    border-radius: 0rem 0rem 0rem .9375rem ;
 }
 
 .Cesta-button {
@@ -147,7 +147,7 @@ button {
     flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    gap: .625rem;
 }
 
 .Cesta-span {
@@ -155,68 +155,68 @@ button {
 }
 
 .Cesta-svg {
-    width: 20px;
+    width: 1.25rem;
 }
 
 .Cesta-items {
     font-size: 1.5rem;
-    padding: 5px 10px;
+    padding: .3125rem .625rem;
     background-color: var(--principal);
-    border-radius: 10px;
+    border-radius: .625rem;
 }
 
 .Cesta-wrap {
     width: 80%;
-    min-height: 500px;
+    min-height: 31.25rem;
 
     background-color: var(--plateado);
-    border: 3px solid var(--principal);
-    border-radius: 15px;
-    padding: 15px;
+    border: .1875rem solid var(--principal);
+    border-radius: .9375rem;
+    padding: .9375rem;
     position: fixed;
-    top: calc(50% - (500px / 2));
+    top: calc(50% - (31.25rem / 2));
     left:calc(10%);
     display: flex;
     flex-flow: row wrap;
     justify-content: start;
     align-items: start;
-    gap: 20px;
+    gap: 1.25rem;
     opacity: 0;
     pointer-events: none;
-    transform: translateY(-950px);
+    transform: translateY(-59.375rem);
     transition: transform 0.5s ease, opacity 0.5s ease;
 }
 
 .Cesta-wrap.Activo {
-    transform: translateY(0px);
+    transform: translateY(0rem);
     opacity: 1;
     pointer-events: all;
 }
 
 .Cesta-cerrar {
     width: 100%;
-    height: 40px;
+    height: 2.5rem;
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
 }
 .Cesta-svg--cerrar{
-    height: 40px;
+    height: 2.5rem;
 
 }
 .Cesta-svg--cerrar:hover {
-    height: 50px;
+    height: 3.125rem;
 
 }
 
 
 .Cesta-ul {
     width: 100%;
-    min-height: 400px;
-    max-height: 500px;
+    min-height: 25rem;
+    max-height: 31.25rem;
     overflow-y: scroll;
-    padding: 10px;
+    padding: .625rem;
     flex-flow: row wrap;
     justify-content: start;
     align-items: start;
@@ -224,17 +224,17 @@ button {
 }
 
 .Cesta-ul::-webkit-scrollbar {
-    width: 10px;
+    width: .625rem;
 }
 
 
 .Cesta-ul::-webkit-scrollbar-track {
-    border-radius: 10px;
+    border-radius: .625rem;
 }
 
 .Cesta-ul::-webkit-scrollbar-thumb {
     background: var(--claro);
-    border-radius: 10px;
+    border-radius: .625rem;
 }
 
 .Cesta-ul::-webkit-scrollbar-thumb:hover {
@@ -242,16 +242,16 @@ button {
 }
 
 .Cesta-li {
-    padding: 5px 15px;
+    padding: .3125rem .9375rem;
     width: 100%;
-    min-height: 30px;
+    min-height: 1.875rem;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
-    gap: 40px;
+    gap: 2.5rem;
     position: relative;
-    border-bottom: 3px solid var(--claro);
+    border-bottom: .1875rem solid var(--claro);
 }
 
 .Cesta-nombre {
@@ -267,12 +267,12 @@ button {
 }
 
 .Cesta-total {
-    padding: 0px 30px;
+    padding: 0rem 1.875rem;
     width: 100%;
-    min-height: 60px;
+    min-height: 3.75rem;
     background-color: var(--principal);
-    border: 3px solid var(--claro);
-    border-radius: 15px;
+    border: .1875rem solid var(--claro);
+    border-radius: .9375rem;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
@@ -281,14 +281,14 @@ button {
 }
 
 .Cesta-borrar {
-    width: 80px;
-    height: 30px;
+    width: 5rem;
+    height: 1.875rem;
     background-color: var(--principal);
-    border: 2px solid var(--negro);
-    border-radius: 15px;
+    border: .125rem solid var(--negro);
+    border-radius: .9375rem;
     color: var(--negro);
     position: absolute;
-    top: calc(50% - 15px);
+    top: calc(50% - .9375rem);
     left: calc(50%);
 
 }
@@ -309,7 +309,7 @@ button {
 
 .Main {
     width: 100%;
-    min-height: 1000px;
+    min-height: 100vh;
     color: var(--blanco);
     position: relative;
 }
@@ -331,47 +331,47 @@ button {
 }
 .Fondo-svg{
     width: 100%;
-    max-width: 700px;
+    max-width: 43.75rem;
     
     color: var(--claro);
     opacity: 0.3;
-    filter: blur(1px);
+    filter: blur(.0625rem);
 }
 
 .Mapas {
     width: 100%;
-    padding: 20px;
+    padding: 1.25rem;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: start;
-    gap: 10px;
+    gap: .625rem;
 }
 
 .Main-h2 {
     width: 70%;
-    padding: 20px 25px;
+    padding: 1.25rem 1.5625rem;
     font-weight: 600;
     font-size: 3rem;
 }
 .Main-p {
-    padding: 0px 25px;
+    padding: 0rem 1.5625rem;
     text-align: start;
     font-size: 1.3rem;
 }
 
 .Filtro {
     width: 50%;
-    max-width: 200px;
-    padding: 20px 15px;
+    max-width: 12.5rem;
+    padding: 1.25rem .9375rem;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
     align-items: start;
-    gap: 20px;
+    gap: 1.25rem;
     background-color: var(--claro);
-    border: 3px solid var(--principal);
-    border-radius: 15px;
+    border: .1875rem solid var(--principal);
+    border-radius: .9375rem;
 }
 
 .Filtro-legend {
@@ -391,15 +391,15 @@ button {
     width: 80%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 400px;
-    gap: 10px;
+    grid-auto-rows: 25rem;
+    gap: .625rem;
 }
 
 .Articulo-wrap {
-    padding: 10px;
+    padding: .625rem;
     background-color: var(--claro);
-    border: 3px solid var(--principal);
-    border-radius: 15px;
+    border: .1875rem solid var(--principal);
+    border-radius: .9375rem;
     display: none;
     flex-flow: column nowrap;
     justify-content: space-evenly;
@@ -407,9 +407,9 @@ button {
 }
 
 .Articulo-img {
-    max-width: 200px;
-    border: 3px solid var(--principal);
-    border-radius: 15px;
+    max-width: 12.5rem;
+    border: .1875rem solid var(--principal);
+    border-radius: .9375rem;
 }
 
 .Articulo-h3 {
@@ -423,9 +423,9 @@ button {
 }
 
 .Articulo-button {
-    padding: 10px;
-    border: 3px solid var(--principal);
-    border-radius: 15px;
+    padding: .625rem;
+    border: .1875rem solid var(--principal);
+    border-radius: .9375rem;
     background-color: var(--plateado);
     color: var(--negro);
 }
@@ -437,13 +437,13 @@ button {
     width: 100%;
     height: 100%;
     z-index: 5;
-    padding: 40px;
+    padding: 2.5rem;
 
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 1.25rem;
     
     opacity: 0;
     pointer-events: none;
@@ -456,12 +456,12 @@ button {
 }
 .Lightbox-button{
     background-color: transparent;
-    width: 40px;
+    width: 2.5rem;
     color: var(--principal);
 }
 .Lightbox-wrap{
-    border: 5px solid var(--principal);
-    border-radius: 25px;
+    border: .3125rem solid var(--principal);
+    border-radius: 1.5625rem;
     overflow: hidden;
 }
 .Lightbox-img{
@@ -501,23 +501,23 @@ button {
     }
     .Cesta-wrap{
         width: 90%;
-        top: calc(50% - (500px / 2));
+        top: calc(50% - (31.25rem / 2));
         left:calc(5%);
-        padding: 10px;
+        padding: .625rem;
     }
     .Cesta-ul{
         width: 100%;
     }
     .Cesta-li {
-        padding: 5px 15px;
+        padding: .3125rem .9375rem;
         width: 100%;
-        min-height: 30px;
+        min-height: 1.875rem;
         display: flex;
         flex-flow: row nowrap;
         justify-content: space-around;
         align-items: center;
         position: relative;
-        border-bottom: 3px solid var(--claro);
+        border-bottom: .1875rem solid var(--claro);
     }
     .Cesta-nombre{
         font-size: 1.2rem;
@@ -527,9 +527,9 @@ button {
     }
     
     .Cesta-borrar {
-        padding: 2px;
+        padding: .125rem;
         background-color: var(--principal);
-        border: 3px solid var(--claro);
+        border: .1875rem solid var(--claro);
         position: static;
         display: flex;
         flex-flow: row nowrap;
@@ -540,7 +540,7 @@ button {
 @media (max-width:600px){
 
     .Header{
-        min-height: 50px;
+        min-height: 3.125rem;
     }
     .Header-wrap{
         display: flex;
@@ -550,22 +550,22 @@ button {
     }
     .Header-boton{
         display: block;
-        width: 50px;
-        height: 50px;
+        width: 3.125rem;
+        height: 3.125rem;
     }
     .Header-h1{
-        width: 150px;
+        width: 9.375rem;
         position: absolute;
-        left: calc(50% - 50px);
+        left: calc(50% - 3.125rem);
     }
     .Boton-ul{
         background-color: var(--principal);
         color: var(--negro);
-        width: 90px;
-        height: 0px;
+        width: 5.625rem;
+        height: 0rem;
         position: absolute;
-        top: 60px;
-        right:  0px;
+        top: 3.75rem;
+        right:  0rem;
         z-index: 2;
         overflow: hidden;
 
@@ -579,18 +579,18 @@ button {
 
     }
     .Boton-ul.Activo{
-        height: 200px;
+        height: 12.5rem;
     }
     .Boton-li{
         width: 100%;
-        height: calc(210px / 4);
+        height: calc(13.125rem / 4);
         text-align: center;
 
     }
     .Boton-a{
         width: 100%;
         height: 100%;
-        padding: 5px;
+        padding: .3125rem;
         display: flex;
         flex-flow: column nowrap;
         justify-content: center;
@@ -610,11 +610,11 @@ button {
     }
     .Cesta {
         background-color: transparent;
-        border-radius: 0px;
-        border: 0px;
+        border-radius: 0rem;
+        border: 0rem;
         position: static;
-        width: 90px;
-        left: 10px;
+        width: 5.625rem;
+        left: .625rem;
         bottom: 0;
         z-index: 1;
     }
@@ -628,7 +628,7 @@ button {
         flex-flow: row nowrap;
         justify-content: center;
         align-items: center;
-        gap: 10px;
+        gap: .625rem;
     }
     
     
@@ -637,7 +637,7 @@ button {
     }
     
     .Cesta-svg {
-        width: 30px;
+        width: 1.875rem;
     }
 
     .Mapas{
@@ -648,11 +648,11 @@ button {
     }
     .Filtro {
         width: 100%;
-        max-width: 480px;
+        max-width: 30rem;
         flex-flow: row nowrap;
         justify-content: space-between;
         align-items: center;
-        gap: 20px;
+        gap: 1.25rem;
     }
 
     .Filtro-legend{
@@ -667,10 +667,10 @@ button {
         width: 100%;
         display: grid;
         grid-template-columns: repeat(1, 1fr);
-        grid-auto-rows: 400px;
-        gap: 10px;
+        grid-auto-rows: 25rem;
+        gap: .625rem;
     }
     .Lightbox{
-        padding: 10px;
+        padding: .625rem;
     }
 }
