--- a/css/index.css
+++ b/css/index.css
@@ -372,7 +372,7 @@ h6 {
         justify-content: space-evenly;
         align-items: center;
 
-        transition: all .5s ease;
+        transition: height .5s ease;
 
     }
 
