--- a/css/sobrenosotros.css
+++ b/css/sobrenosotros.css
@@ -243,7 +243,7 @@ h1 , h2 , h3 , h4 , h5 , h6{
         justify-content: space-evenly;
         align-items: center;
 
-        transition: all .5s ease;
+        transition: height .5s ease;
 
     }
     .Boton-ul.Activo{
